; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_vtlb.c___is_tr_overlap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_vtlb.c___is_tr_overlap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thash_data = type { i64, i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.thash_data*, i64, i64, i64)* @__is_tr_overlap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__is_tr_overlap(%struct.thash_data* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.thash_data*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.thash_data* %0, %struct.thash_data** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load %struct.thash_data*, %struct.thash_data** %6, align 8
  %13 = getelementptr inbounds %struct.thash_data, %struct.thash_data* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %4
  %17 = load %struct.thash_data*, %struct.thash_data** %6, align 8
  %18 = getelementptr inbounds %struct.thash_data, %struct.thash_data* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* %7, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %16, %4
  store i32 0, i32* %5, align 4
  br label %45

23:                                               ; preds = %16
  %24 = load %struct.thash_data*, %struct.thash_data** %6, align 8
  %25 = getelementptr inbounds %struct.thash_data, %struct.thash_data* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %10, align 8
  %27 = load i64, i64* %10, align 8
  %28 = load %struct.thash_data*, %struct.thash_data** %6, align 8
  %29 = getelementptr inbounds %struct.thash_data, %struct.thash_data* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 8
  %31 = call i64 @PSIZE(i32 %30)
  %32 = add nsw i64 %27, %31
  %33 = sub nsw i64 %32, 1
  store i64 %33, i64* %11, align 8
  %34 = load i64, i64* %9, align 8
  %35 = sub nsw i64 %34, 1
  store i64 %35, i64* %9, align 8
  %36 = load i64, i64* %8, align 8
  %37 = load i64, i64* %11, align 8
  %38 = icmp sgt i64 %36, %37
  br i1 %38, label %43, label %39

39:                                               ; preds = %23
  %40 = load i64, i64* %10, align 8
  %41 = load i64, i64* %9, align 8
  %42 = icmp sgt i64 %40, %41
  br i1 %42, label %43, label %44

43:                                               ; preds = %39, %23
  store i32 0, i32* %5, align 4
  br label %45

44:                                               ; preds = %39
  store i32 1, i32* %5, align 4
  br label %45

45:                                               ; preds = %44, %43, %22
  %46 = load i32, i32* %5, align 4
  ret i32 %46
}

declare dso_local i64 @PSIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
